--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,37 @@
     <title>To-Do App</title>
 </head>
 <body>
+    <div class="container">
+        <div class="project">
+            <div class="title">projects</div>
+            <div class="project-btns">
+                <button class="btn add-project">new project</button>
+                <button class="btn edit-project">edit project</button>
+                <button class="btn delete-project">delete project</button>
+            </div>
+            <div class="project-names">
+                <ul></ul>
+            </div>
+        </div>
+
+        <div class="todo">
+            <div class="title">todo tasks</div>
+            <div class="todo-btns">
+                <button class="btn add-todo">new todo</button>
+                <button class="btn edit-todo">edit todo</button>
+                <button class="btn delete-todo">delete todo</button>
+            </div>
+            <div class="todo-names">
+                <ul></ul>
+            </div>
+        </div>
+
+        <div class="todo-full-detail">
+            <div class="todo-details">
+                <ul></ul>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
